# TAMX

./: .gitignore  LICENSE  README.md  pyproject.toml  visualization.py
asset/output/: encode.json  generate.json  generate_vis.html
example/offline/: encode.py  gaze_demo.py  gaze_generate.py  generate.py
tamx/: __init__.py  core.py  filters.py  functions.py  inject.py  qwen.py  utils.py
tamx/vis/: html_gen.py  renderer.js  styles.css
webapp/: server.py
webapp/static/: app.js  index.html  styles.css
